--- a/mongodb/movie-management-system/Backend/package.json
+++ b/mongodb/movie-management-system/Backend/package.json
@@ -1,17 +1,16 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev" : "nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
-  "types": "module",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.2.1",
